# docs-mcp-rs

./: .env.example  .gitmodules  Cargo.toml  LICENSE  PLAN.md  README.md  README.zh.md
migrations/: 001_initial_schema.sql  002_fix_fts_delete_trigger.sql  003_create_vector_table.sql  004_convert_embedding_to_f16.sql
public/: app.js  index.html  style.css
public/css/: base.css  components.css  header.css  jobs.css  main.css  navigation.css  responsive.css  search.css  toast.css  variables.css
public/js/: api.js  app.js  config.js  i18n.js  jobs.js  libraries.js  scrape.js  search.js  sse.js  theme.js  ui.js
public/lang/: en.json  zh-CN.json
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/core/: config.rs  embedding.rs  error.rs  mod.rs  types.rs
src/embed/: google.rs  mod.rs  none.rs  openai.rs  queue.rs  rate_limiter.rs  types.rs
src/events/: event_bus.rs  mod.rs  types.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/pipeline/: manager.rs  mod.rs  types.rs  worker.rs
src/scraper/: browser_fetcher.rs  client.rs  converter.rs  crawler.rs  fetcher.rs  link_extractor.rs  mod.rs  parser.rs
src/splitter/: code_splitter.rs  markdown_splitter.rs  mod.rs  text_splitter.rs
src/store/: connection.rs  document_store.rs  library_store.rs  migrations.rs  mod.rs  page_store.rs  vector_search.rs  version_store.rs
src/web/: handlers.rs  mod.rs  sse.rs
