[package]
name = "docs-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }
