[package]
name = "docs-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = "0.33.0"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
html2md = "0.2.15"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
rmcp = { version = "0.17.0", features = ["server"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
schemars = "1.2.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
