[package]
name = "docs-mcp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-openai = "0.33.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
fast_html2md = { version = "0.0.12", package = "fast_html2md" }
mime_guess = "2.0.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
rmcp = { version = "0.17.0", features = ["server", "transport-streamable-http-server"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-embed = { version = "8.11.0", features = ["axum", "axum-ex"] }
schemars = "1.2.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.0.3"
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
dom_smoothie = "0.15.0"
headless_chrome = { version = "1.0.21", features = ["fetch"] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.
